fix blockchain call and added address to jwt
