# internal/handler/api/controller/kpu_kota.go
@@ -3,7 +3,6 @@ package controller
 import (
 	"context"
 	"encoding/json"
-	"github.com/google/uuid"
 	"github.com/nocturna-ta/golib/custerr"
 	"github.com/nocturna-ta/golib/fileutils"
 	"github.com/nocturna-ta/golib/http/filehandler"
@@ -14,39 +13,6 @@ import (
 	"github.com/nocturna-ta/ums/internal/infrastructures/custresp"
 	"github.com/nocturna-ta/ums/internal/usecases/request"
 )
-
-// RegisterKPUKota godoc
-// @Summary Register KPU Kota
-// @Description Register KPU Kota
-// @Tags kpu_kota
-// @Accept json
-// @Param users body request.KPUKotaRegistrationRequest true "Register Request"
-// @Param X-User-Id header string false "User"
-// @Param X-Address-Id header string false "Address"
-// @Param X-Role header string false "Role"
-// @Produce json
-// @Success 200 {object} jsonResponse{data=response.KPUKotaRegistrationResponse}
-// @Router /v1/kpu-kota/register [post]
-func (api *API) RegisterKPUKota(ctx context.Context, req *router.Request) (*rest.JSONResponse, error) {
-	span, ctx := tracing.StartSpanFromContext(ctx, "Controller.RegisterKPUKota")
-	defer span.End()
-
-	var regisReq request.KPUKotaRegistrationRequest
-	err := json.Unmarshal(req.RawBody(), &regisReq)
-
-	if err != nil {
-		return custresp.CustomErrorResponse(err)
-	}
-
-	err = regisReq.ValidateRegistrationRequest()
-
-	res, err := api.kpuKotaUc.RegisterKPUKota(ctx, &regisReq)
-	if err != nil {
-		return custresp.CustomErrorResponse(err)
-	}
-
-	return rest.NewJSONResponse().SetData(res), nil
-}
 
 // GetAllKPUKota godoc
 // @Summary Get All KPU Kota
@@ -71,56 +37,22 @@ func (api *API) GetAllKPUKota(ctx context.Context, req *router.Request) (*rest.J
 	return rest.NewJSONResponse().SetData(res), nil
 }
 
-// GetKPUKotaByAddress godoc
-// @Summary Get KPU Kota By Address
-// @Description Get KPU Kota By Address
+// GetKPUKotaByUserID godoc
+// @Summary Get KPU Kota By User ID
+// @Description Get KPU Kota By User ID
 // @Tags kpu_kota
 // @Accept json
-// @Param X-User-Id header string false "User"
+// @Param X-User-Id header string true "User"
 // @Param X-Address-Id header string false "Address"
 // @Param X-Role header string false "Role"
 // @Produce json
 // @Success 200 {object} jsonResponse{data=response.KPUKotaResponse}
-// @Router /v1/kpu-kota/address [get]
-func (api *API) GetKPUKotaByAddress(ctx context.Context, req *router.Request) (*rest.JSONResponse, error) {
-	span, ctx := tracing.StartSpanFromContext(ctx, "Controller.GetKPUKotaByAddress")
+// @Router /v1/kpu-kota/id [get]
+func (api *API) GetKPUKotaByUserID(ctx context.Context, req *router.Request) (*rest.JSONResponse, error) {
+	span, ctx := tracing.StartSpanFromContext(ctx, "Controller.GetKPUKotaByUserID")
 	defer span.End()
 
-	res, err := api.kpuKotaUc.GetKPUKotaByAddress(ctx)
-	if err != nil {
-		return custresp.CustomErrorResponse(err)
-	}
-
-	return rest.NewJSONResponse().SetData(res), nil
-}
-
-// GetKPUKotaByID godoc
-// @Summary Get KPU Kota By ID
-// @Description Get KPU Kota By ID
-// @Tags kpu_kota
-// @Accept json
-// @Param X-User-Id header string false "User"
-// @Param X-Address-Id header string false "Address"
-// @Param X-Role header string false "Role"
-// @Param id path string true "KPU Kota ID"
-// @Produce json
-// @Success 200 {object} jsonResponse{data=response.KPUKotaResponse}
-// @Router /v1/kpu-kota/{id} [get]
-func (api *API) GetKPUKotaByID(ctx context.Context, req *router.Request) (*rest.JSONResponse, error) {
-	span, ctx := tracing.StartSpanFromContext(ctx, "Controller.GetKPUKotaByID")
-	defer span.End()
-
-	kpuKotaIDStr := req.Params("id")
-	kpuKotaID, err := uuid.Parse(kpuKotaIDStr)
-	if err != nil {
-		return custresp.CustomErrorResponse(&custerr.ErrChain{
-			Message: "Invalid KPU Kota ID",
-			Code:    400,
-			Type:    response.ErrBadRequest,
-		})
-	}
-
-	res, err := api.kpuKotaUc.GetKPUKotaByID(ctx, kpuKotaID)
+	res, err := api.kpuKotaUc.GetKPUKotaByUserID(ctx)
 	if err != nil {
 		return custresp.CustomErrorResponse(err)
 	}
@@ -133,27 +65,16 @@ func (api *API) GetKPUKotaByID(ctx context.Context, req *router.Request) (*rest.
 // @Description Upload a photo for a KPU Kota
 // @Tags kpu_kota
 // @Accept multipart/form-data
-// @Param X-User-Id header string false "User"
-// @Param X-Address-Id header string false "Address"
+// @Param X-User-Id header string true "User ID"
+// @Param X-Address-Id header string false "Public Address"
 // @Param X-Role header string false "Role"
-// @Param id path string true "KPU Kota ID"
 // @Param photo formData file true "Photo file (jpg, jpeg, png only)"
 // @Produce json
 // @Success 200 {object} jsonResponse{data=string}
-// @Router /v1/kpu-kota/{id}/photo [post]
+// @Router /v1/kpu-kota/photo [post]
 func (api *API) UploadKPUKotaPhoto(ctx context.Context, req *router.Request) (*rest.JSONResponse, error) {
 	span, ctx := tracing.StartSpanFromContext(ctx, "Controller.UploadKPUKotaPhoto")
 	defer span.End()
-
-	kpuKotaIDStr := req.Params("id")
-	kpuKotaID, err := uuid.Parse(kpuKotaIDStr)
-	if err != nil {
-		return custresp.CustomErrorResponse(&custerr.ErrChain{
-			Message: "Invalid KPU Kota ID",
-			Code:    400,
-			Type:    response.ErrBadRequest,
-		})
-	}
 
 	form, err := req.RawRequest().MultipartForm()
 	if err != nil {
@@ -207,7 +128,7 @@ func (api *API) UploadKPUKotaPhoto(ctx context.Context, req *router.Request) (*r
 	}
 	defer file.Close()
 
-	err = api.kpuKotaUc.UploadKPUKotaPhoto(ctx, kpuKotaID, file, uploadResult.OriginalFilename)
+	err = api.kpuKotaUc.UploadKPUKotaPhoto(ctx, file, uploadResult.OriginalFilename)
 	if err != nil {
 		return custresp.CustomErrorResponse(err)
 	}
@@ -219,28 +140,17 @@ func (api *API) UploadKPUKotaPhoto(ctx context.Context, req *router.Request) (*r
 // @Summary Get photo for KPU Kota
 // @Description Get the photo for a KPU Kota
 // @Tags kpu_kota
-// @Param X-User-Id header string false "User"
+// @Param X-User-Id header string true "User"
 // @Param X-Address-Id header string false "Address"
 // @Param X-Role header string false "Role"
-// @Param id path string true "KPU Kota ID"
 // @Produce octet-stream
 // @Success 200
-// @Router /v1/kpu-kota/{id}/photo [get]
+// @Router /v1/kpu-kota/photo [get]
 func (api *API) GetKPUKotaPhoto(ctx context.Context, req *router.Request) (*rest.AttachmentResponse, error) {
 	span, ctx := tracing.StartSpanFromContext(ctx, "Controller.GetKPUKotaPhoto")
 	defer span.End()
 
-	kpuKotaIDStr := req.Params("id")
-	kpuKotaID, err := uuid.Parse(kpuKotaIDStr)
-	if err != nil {
-		return nil, &custerr.ErrChain{
-			Message: "Invalid KPU Kota ID",
-			Code:    400,
-			Type:    response.ErrBadRequest,
-		}
-	}
-
-	file, contentType, err := api.kpuKotaUc.GetKPUKotaPhoto(ctx, kpuKotaID)
+	file, contentType, err := api.kpuKotaUc.GetKPUKotaPhoto(ctx)
 	if err != nil {
 		return nil, err
 	}
