# internal/handler/api/controller/kpu_provinsi.go
@@ -3,7 +3,6 @@ package controller
 import (
 	"context"
 	"encoding/json"
-	"github.com/google/uuid"
 	"github.com/nocturna-ta/golib/custerr"
 	"github.com/nocturna-ta/golib/fileutils"
 	"github.com/nocturna-ta/golib/http/filehandler"
@@ -14,39 +13,6 @@ import (
 	"github.com/nocturna-ta/ums/internal/infrastructures/custresp"
 	"github.com/nocturna-ta/ums/internal/usecases/request"
 )
-
-// RegisterKPUProvinsi godoc
-// @Summary Register KPU Provinsi
-// @Description Register KPU Provinsi
-// @Tags kpu_provinsi
-// @Accept json
-// @Param X-User-Id header string false "User"
-// @Param X-Address-Id header string false "Address"
-// @Param X-Role header string false "Role"
-// @Param users body request.KPUProvinsiRegistrationRequest true "Register Request"
-// @Produce json
-// @Success 200 {object} jsonResponse{data=response.KPUProvinsiRegistrationResponse}
-// @Router /v1/kpu-provinsi/register [post]
-func (api *API) RegisterKPUProvinsi(ctx context.Context, req *router.Request) (*rest.JSONResponse, error) {
-	span, ctx := tracing.StartSpanFromContext(ctx, "Controller.RegisterKPUProvinsi")
-	defer span.End()
-
-	var regisReq request.KPUProvinsiRegistrationRequest
-	err := json.Unmarshal(req.RawBody(), &regisReq)
-
-	if err != nil {
-		return custresp.CustomErrorResponse(err)
-	}
-
-	err = regisReq.ValidateRegistrationRequest()
-
-	res, err := api.kpuProvinsiUc.RegisterKPUProvinsi(ctx, &regisReq)
-	if err != nil {
-		return custresp.CustomErrorResponse(err)
-	}
-
-	return rest.NewJSONResponse().SetData(res), nil
-}
 
 // GetAllKPUProvinsi godoc
 // @Summary Get All KPU Provinsi
@@ -71,56 +37,22 @@ func (api *API) GetAllKPUProvinsi(ctx context.Context, req *router.Request) (*re
 	return rest.NewJSONResponse().SetData(res), nil
 }
 
-// GetKPUProvinsiByAddress godoc
-// @Summary Get KPU Provinsi By Address
-// @Description Get KPU Provinsi By Address
+// GetKPUProvinsiByUserID godoc
+// @Summary Get KPU Provinsi By User ID
+// @Description Get KPU Provinsi By User ID
 // @Tags kpu_provinsi
 // @Accept json
-// @Param X-User-Id header string false "User"
-// @Param X-Address-Id header string false "Address"
+// @Param X-User-Id header string true "User ID"
+// @Param X-Address-Id header string false "Public Address"
 // @Param X-Role header string false "Role"
 // @Produce json
 // @Success 200 {object} jsonResponse{data=response.KPUProvinsiResponse}
-// @Router /v1/kpu-provinsi/address [get]
-func (api *API) GetKPUProvinsiByAddress(ctx context.Context, req *router.Request) (*rest.JSONResponse, error) {
-	span, ctx := tracing.StartSpanFromContext(ctx, "Controller.GetKPUProvinsiByAddress")
-	defer span.End()
-
-	res, err := api.kpuProvinsiUc.GetKPUProvinsiByAddress(ctx)
-	if err != nil {
-		return custresp.CustomErrorResponse(err)
-	}
-
-	return rest.NewJSONResponse().SetData(res), nil
-}
-
-// GetKPUProvinsiByID godoc
-// @Summary Get KPU Provinsi By ID
-// @Description Get KPU Provinsi By ID
-// @Tags kpu_provinsi
-// @Accept json
-// @Param X-User-Id header string false "User"
-// @Param X-Address-Id header string false "Address"
-// @Param X-Role header string false "Role"
-// @Param id path string true "KPU Provinsi ID"
-// @Produce json
-// @Success 200 {object} jsonResponse{data=response.KPUProvinsiResponse}
-// @Router /v1/kpu-provinsi/{id} [get]
-func (api *API) GetKPUProvinsiByID(ctx context.Context, req *router.Request) (*rest.JSONResponse, error) {
+// @Router /v1/kpu-provinsi/id [get]
+func (api *API) GetKPUProvinsiByUserID(ctx context.Context, req *router.Request) (*rest.JSONResponse, error) {
 	span, ctx := tracing.StartSpanFromContext(ctx, "Controller.GetKPUProvinsiByID")
 	defer span.End()
 
-	kpuProvinsiIDStr := req.Params("id")
-	kpuProvinsiID, err := uuid.Parse(kpuProvinsiIDStr)
-	if err != nil {
-		return custresp.CustomErrorResponse(&custerr.ErrChain{
-			Message: "Invalid KPU Provinsi ID",
-			Code:    400,
-			Type:    response.ErrBadRequest,
-		})
-	}
-
-	res, err := api.kpuProvinsiUc.GetKPUProvinsiByID(ctx, kpuProvinsiID)
+	res, err := api.kpuProvinsiUc.GetKPUProvinsiByUserID(ctx)
 	if err != nil {
 		return custresp.CustomErrorResponse(err)
 	}
@@ -133,27 +65,16 @@ func (api *API) GetKPUProvinsiByID(ctx context.Context, req *router.Request) (*r
 // @Description Upload a photo for a KPU Provinsi
 // @Tags kpu_provinsi
 // @Accept multipart/form-data
-// @Param X-User-Id header string false "User"
-// @Param X-Address-Id header string false "Address"
+// @Param X-User-Id header string true "User ID"
+// @Param X-Address-Id header string false "Public Address"
 // @Param X-Role header string false "Role"
-// @Param id path string true "KPU Provinsi ID"
 // @Param photo formData file true "Photo file (jpg, jpeg, png only)"
 // @Produce json
 // @Success 200 {object} jsonResponse{data=string}
-// @Router /v1/kpu-provinsi/{id}/photo [post]
+// @Router /v1/kpu-provinsi/photo [post]
 func (api *API) UploadKPUProvinsiPhoto(ctx context.Context, req *router.Request) (*rest.JSONResponse, error) {
 	span, ctx := tracing.StartSpanFromContext(ctx, "Controller.UploadKPUProvinsiPhoto")
 	defer span.End()
-
-	kpuProvinsiIDStr := req.Params("id")
-	kpuProvinsiID, err := uuid.Parse(kpuProvinsiIDStr)
-	if err != nil {
-		return custresp.CustomErrorResponse(&custerr.ErrChain{
-			Message: "Invalid KPU Provinsi ID",
-			Code:    400,
-			Type:    response.ErrBadRequest,
-		})
-	}
 
 	form, err := req.RawRequest().MultipartForm()
 	if err != nil {
@@ -207,7 +128,7 @@ func (api *API) UploadKPUProvinsiPhoto(ctx context.Context, req *router.Request)
 	}
 	defer file.Close()
 
-	err = api.kpuProvinsiUc.UploadKPUProvinsiPhoto(ctx, kpuProvinsiID, file, uploadResult.OriginalFilename)
+	err = api.kpuProvinsiUc.UploadKPUProvinsiPhoto(ctx, file, uploadResult.OriginalFilename)
 	if err != nil {
 		return custresp.CustomErrorResponse(err)
 	}
@@ -219,28 +140,17 @@ func (api *API) UploadKPUProvinsiPhoto(ctx context.Context, req *router.Request)
 // @Summary Get photo for KPU Provinsi
 // @Description Get the photo for a KPU Provinsi
 // @Tags kpu_provinsi
-// @Param X-User-Id header string false "User"
-// @Param X-Address-Id header string false "Address"
+// @Param X-User-Id header string true "User ID"
+// @Param X-Address-Id header string false "Public Address"
 // @Param X-Role header string false "Role"
-// @Param id path string true "KPU Provinsi ID"
 // @Produce octet-stream
 // @Success 200
-// @Router /v1/kpu-provinsi/{id}/photo [get]
+// @Router /v1/kpu-provinsi/photo [get]
 func (api *API) GetKPUProvinsiPhoto(ctx context.Context, req *router.Request) (*rest.AttachmentResponse, error) {
 	span, ctx := tracing.StartSpanFromContext(ctx, "Controller.GetKPUProvinsiPhoto")
 	defer span.End()
 
-	kpuProvinsiIDStr := req.Params("id")
-	kpuProvinsiID, err := uuid.Parse(kpuProvinsiIDStr)
-	if err != nil {
-		return nil, &custerr.ErrChain{
-			Message: "Invalid KPU Provinsi ID",
-			Code:    400,
-			Type:    response.ErrBadRequest,
-		}
-	}
-
-	file, contentType, err := api.kpuProvinsiUc.GetKPUProvinsiPhoto(ctx, kpuProvinsiID)
+	file, contentType, err := api.kpuProvinsiUc.GetKPUProvinsiPhoto(ctx)
 	if err != nil {
 		return nil, err
 	}
